fix: fixed-columns disabled on mobile - tuning patric

--- a/src/styles/Settings.less
+++ b/src/styles/Settings.less
@@ -150,18 +150,6 @@
 @section_margin_top_large: 60px;
 @section_margin_top_xlarge: 80px;
 
-// Mixins
-.rounded-drop-shadow () {
-  border-radius: 4px;
-  box-shadow: 0 3px 0 1px rgba(0, 0, 0, 0.1);
-}
-
-.bp-min(@min) {
-  @media only screen and (min-width: @min) {
-    .bp-min(@min, set);
-  }
-}
-
 // Components
 @button-auto-close-color: @light-red;
 @button-border-radius: @grid-base-three;
@@ -258,3 +246,27 @@
 @overlay-radio-radius: 25px;
 @header-height: @grid-base-twelve;
 @message-wrapper-height: 109px;
+
+// Mixins
+.rounded-drop-shadow () {
+  border-radius: 4px;
+  box-shadow: 0 3px 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.bp-min(@min) {
+  @media only screen and (min-width: @min) {
+    .bp-min(@min, set);
+  }
+}
+
+.no-sticky-cell-left () {
+  position: relative !important;
+  left: auto !important;
+  overflow: hidden;
+}
+
+.no-sticky-cell-right () {
+  position: relative !important;
+  right: auto !important;
+  overflow: hidden;
+}
